--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.multiplayer-hlapi": "1.0.4",
     "com.unity.package-manager-ui": "2.1.2",
     "com.unity.render-pipelines.high-definition": "5.10.0-preview",
     "com.unity.visualeffectgraph": "5.10.0-preview",
